--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -29,7 +29,6 @@ body {
     color: var(--text-color);
 }
 
-
 .header {
     position: fixed;
     top: 0;
@@ -76,13 +75,11 @@ body {
 .home-content {
     display: flex;
     align-items: center;
-    justify-content: center; 
-    gap: 20rem;             
+    justify-content: center;
+    gap: 20rem;
     width: 100%;
 }
 
-
-/* Texto */
 .home-text {
     max-width: 45rem;
 }
@@ -109,12 +106,11 @@ span {
     margin: 1rem 0 2rem;
 }
 
-
 .social-media {
-    margin-top: 1.5rem; 
+    margin-top: 1.5rem;
     margin-bottom: 1.8rem;
     display: flex;
-    gap: 1.2rem; 
+    gap: 1.2rem;
     align-items: center;
 }
 
@@ -138,10 +134,9 @@ span {
     transform: translateY(-3px);
 }
 
-/* Imagem */
 .inicio-img img {
-    width: 500px;    
-    border-radius: 50%;  
+    width: 500px;
+    border-radius: 50%;
     display: block;
 }
 
@@ -171,15 +166,13 @@ span {
     justify-content: center;
     gap: 6rem;
     background: var(--bg-color-dois);
-    /* AQUI é o que aumenta a tela */
-    min-height: 110vh;        /* maior que a altura da tela */
-    padding: 12rem 9% 10rem;  /* cima | lados | baixo */
+    min-height: 110vh;
+    padding: 12rem 9% 10rem;
 }
 
-
 .about-img img {
-    width: 500px;   
-    height: 500px;   
+    width: 500px;
+    height: 500px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -210,8 +203,8 @@ span {
 }
 
 .skills {
-    padding: 10rem 9% 10rem; /* aumenta espaço em cima e embaixo */
-    min-height: 120vh;       /* deixa a seção maior que a tela */
+    padding: 10rem 9% 10rem;
+    min-height: 120vh;
 }
 
 .skills .heading {
@@ -224,11 +217,10 @@ span {
     color: var(--mais-color);
 }
 
-/* Container das caixas */
 .skills-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 colunas lado a lado */
-    gap: 3rem;                              /* espaço entre as caixas */
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem;
     justify-items: center;
     align-items: stretch;
     width: 100%;
@@ -241,19 +233,17 @@ span {
     padding: 2.5rem;
     text-align: center;
     width: 100%;
-    max-width: 340px;     /* todas com mesma largura */
-    min-height: 400px;    /* todas com mesma altura */
+    max-width: 340px;
+    min-height: 400px;
     box-shadow: 0 12px 30px rgba(0,0,0,0.15);
     transition: .3s;
 }
 
-/* Hover na caixa */
 .skills-box:hover {
     transform: translateY(-6px);
     box-shadow: 0 18px 40px rgba(0, 0, 0, 0.35);
 }
 
-/* Ícone em "caixa" */
 .skills-icon {
     width: 60px;
     height: 60px;
